aftermarketCompanies collection, minor changes in swagger file, index.js, and files for controllers, models and routes.
