# routes/index.js
@@ -3,4 +3,5 @@ router.use('/parts', require('./partsRoute'));
 router.use('/user', require('./userRoute'));
 router.use('/vehicle', require('./vehicleRoute'));
 router.use('/brand', require('./brandRoute'));
+router.use('/aftermarketComp', require('./aftermarketCompaniesRoute')); 
 module.exports = router;
